fixed the dark mode button css

--- a/src/App.css
+++ b/src/App.css
@@ -42,8 +42,9 @@ body {
 .top-main2 {
   display: flex;
   margin: 0 auto;
-  max-width: 950px;
+  max-width: 1000px;
   flex-direction: column;
+  position: relative;
 }
 
 .dm-container {
@@ -67,10 +68,11 @@ body {
 
 .dm-button {
   display: flex;
-  gap: 70px;
-  margin-left: auto;
+  gap: 80px;
   margin-top: 15px;
   font-size: 15px;
+  margin-left: 640px;
+  position: relative;
 }
 
 .main-container {
@@ -102,7 +104,7 @@ body {
 }
 
 .main-image {
-  width: 350px;
+  width: 375px;
   height: 375px;
   overflow: hidden;
 }
@@ -130,7 +132,7 @@ body {
 .skills {
   display: flex;
   margin: 0 auto;
-  max-width: 950px;
+  max-width: 1000px;
   justify-content: space-between;
 }
 
@@ -180,7 +182,7 @@ body {
 .profile-section {
   display: flex;
   margin: 0 auto;
-  max-width: 950px;
+  max-width: 1000px;
   flex-direction: column;
   justify-content: space-between;
 }
@@ -253,7 +255,7 @@ body {
 .projects {
   display: flex;
   margin: 0 auto;
-  max-width: 950px;
+  max-width: 1000px;
   flex-direction: column;
   justify-content: space-between;
   gap: 20px;
@@ -324,7 +326,7 @@ body {
 .footer-contains {
   display: flex;
   margin: 0 auto;
-  max-width: 950px;
+  max-width: 1000px;
   flex-direction: column;
   align-items: center;
   text-align: center;
